<resources>
    <string name="app_name">DeClutter</string>
    <string name="enter_postal">Enter Your Postal Code or ZIP</string>
    <string name="find_page_button">Find Stuff</string>
    <string name="giveaway_page_button">Give Stuff</string>
    <string name="moreInfo">More Info</string>
    <string name="thingNameCatalogue">Item Name</string>
    <string name="contentResThing">Image of Thing</string>
    <string name="desc_title">Description</string>
    <string name="desc_hint">Write a Description of your Item Here</string>
    <string name="backToRecView">Back</string>
    <string name="contactInfo">Contact Info Displayed Here</string>
    <string name="contact">Contact</string>
    <string name="thingType">Item Type</string>
    <string name="type">Type</string>
    <string name="backHomeButton">Home</string>
    <string name="logo" />
    <string name="dimText">Dimensions (cm):</string>
    <string name="width">Width</string>
    <string name="depth">Depth</string>
    <string name="height">Height</string>
    <string name="weightHead">Weight (kg):</string>
    <string name="weightHere">Item or Animal Weight</string>
    <string name="thing_picture_cd">Picture of Thing</string>
    <string name="takePhotoHint">Take Photo</string>
    <string name="thingHeadlineHint">Headline</string>
    <string name="submit">Submit</string>
    <string name="contact_info_title">Contact Info</string>
    <string name="emailHint">Email</string>
    <string name="phoneHint">Phone</string>
    <string name="postalHint">Postal Code or ZIP</string>
    <string name="sizeInfo">Size Info</string>
    <string name="widthHint">Width (cm)</string>
    <string name="depthHint">Depth (cm)</string>
    <string name="heightHint">Height (cm)</string>
    <string name="weightHint">Weight (kg)</string>
</resources>
