<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/thingImageView"
            android:layout_width="346dp"
            android:layout_height="244dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="4dp"
            android:contentDescription="@string/contentResThing"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/thingNameTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars[2]" />

        <com.beardedhen.androidbootstrap.AwesomeTextView
            android:id="@+id/thingNameTextView"
            android:layout_width="0dp"
            android:layout_height="53dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:text="@string/thingNameCatalogue"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            app:bootstrapBrand="regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/thingImageView" />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/grabIt"
            android:layout_width="137dp"
            android:layout_height="50dp"
            android:layout_marginTop="4dp"
            android:text="@string/grabIt"
            android:textSize="18sp"
            android:visibility="visible"
            app:bootstrapBrand="primary"
            app:bootstrapSize="lg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/thingNameTextView"
            app:roundedCorners="true"
            app:showOutline="false" />

        <com.beardedhen.androidbootstrap.AwesomeTextView
            android:id="@+id/descTextView"
            android:layout_width="74dp"
            android:layout_height="44dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:visibility="visible"
            app:bootstrapBrand="regular"
            app:bootstrapText="@string/desc_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backCollapse" />

        <com.beardedhen.androidbootstrap.AwesomeTextView
            android:id="@+id/thingDescTextView"
            android:layout_width="284dp"
            android:layout_height="85dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/profile_background"
            android:text="@string/desc_hint"
            android:textSize="18sp"
            android:visibility="visible"
            app:bootstrapBrand="regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/descTextView"
            app:layout_constraintTop_toTopOf="@+id/descTextView" />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/backCollapse"
            android:layout_width="131dp"
            android:layout_height="47dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="4dp"
            android:text="@string/backToRecView"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.489"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/thingNameTextView" />

        <com.beardedhen.androidbootstrap.AwesomeTextView
            android:id="@+id/thingContactTextView"
            android:layout_width="286dp"
            android:layout_height="31dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/profile_background"
            android:text="@string/contactInfo"
            android:textSize="18sp"
            android:visibility="visible"
            app:bootstrapBrand="regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/contactTextView"
            app:layout_constraintTop_toTopOf="@+id/contactTextView" />


        <com.beardedhen.androidbootstrap.AwesomeTextView
            android:id="@+id/contactTextView"
            android:layout_width="76dp"
            android:layout_height="18dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/contact"
            android:visibility="visible"
            app:bootstrapBrand="regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/widthTextView" />

        <com.beardedhen.androidbootstrap.AwesomeTextView
            android:id="@+id/thingTypeView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/profile_background"
            android:text="@string/thingType"
            android:textSize="18sp"
            android:visibility="visible"
            app:bootstrapBrand="regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/typeView"
            app:layout_constraintTop_toTopOf="@+id/typeView" />

        <com.beardedhen.androidbootstrap.AwesomeTextView
            android:id="@+id/typeView"
            android:layout_width="58dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/type"
            android:visibility="visible"
            app:bootstrapBrand="regular"
            app:layout_constraintEnd_toStartOf="@+id/thingTypeView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/thingContactTextView" />

        <TextView
            android:id="@+id/widthTextView"
            android:layout_width="60dp"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/profile_background"
            android:text="@string/width"
            android:textAlignment="center"
            app:layout_constraintStart_toEndOf="@+id/dimTextView"
            app:layout_constraintTop_toTopOf="@+id/dimTextView" />

        <TextView
            android:id="@+id/dimTextView"
            android:layout_width="118dp"
            android:layout_height="21dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/dimText"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/thingDescTextView" />

        <TextView
            android:id="@+id/depthTextView"
            android:layout_width="60dp"
            android:layout_height="20dp"
            android:background="@drawable/profile_background"
            android:text="@string/depth"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/heightTextView"
            app:layout_constraintStart_toEndOf="@+id/widthTextView"
            app:layout_constraintTop_toTopOf="@+id/dimTextView" />

        <TextView
            android:id="@+id/heightTextView"
            android:layout_width="60dp"
            android:layout_height="20dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/profile_background"
            android:text="@string/height"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/dimTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>