<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/item_picture"
                android:layout_width="180dp"
                android:layout_height="168dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="5dp"
                android:contentDescription="@string/thing_picture_cd"
                app:layout_constraintBottom_toTopOf="@+id/take_Photo"
                app:layout_constraintEnd_toStartOf="@+id/headlineEdit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/thing_picture" />

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/take_Photo"
                android:layout_width="161dp"
                android:layout_height="43dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="8dp"
                android:text="@string/takePhotoHint"
                android:textSize="18sp"
                app:bootstrapBrand="primary"
                app:bootstrapSize="lg"
                app:layout_constraintBottom_toTopOf="@+id/desc_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_picture"
                app:roundedCorners="true"
                app:showOutline="false" />

            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/headlineEdit"
                android:layout_width="153dp"
                android:layout_height="52dp"
                android:layout_marginStart="46dp"
                android:layout_marginTop="50dp"
                android:ems="10"
                android:hint="@string/thingHeadlineHint"
                android:importantForAutofill="yes"
                android:inputType="textPersonName"
                android:textSize="18sp"
                app:bootstrapBrand="info"
                app:bootstrapSize="lg"
                app:layout_constraintStart_toEndOf="@+id/item_picture"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/thing_type"
                android:layout_width="183dp"
                android:layout_height="48dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"
                app:layout_constraintBottom_toTopOf="@+id/take_Photo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/item_picture"
                app:layout_constraintTop_toBottomOf="@+id/headlineEdit"
                app:layout_constraintVertical_bias="1.0" />

            <com.beardedhen.androidbootstrap.AwesomeTextView
                android:id="@+id/desc_title"
                style="@style/desc_style"
                android:layout_width="136dp"
                android:layout_height="31dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/galada"
                android:textSize="24sp"
                app:bootstrapBrand="primary"
                app:bootstrapText="@string/desc_title"
                app:layout_constraintBottom_toTopOf="@+id/thingDescEdit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/take_Photo" />

            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/thingDescEdit"
                android:layout_width="320dp"
                android:layout_height="85dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="55dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/desc_hint"
                android:inputType="textPersonName"
                android:textAlignment="center"
                app:bootstrapBrand="info"
                app:bootstrapSize="lg"
                app:layout_constraintBottom_toTopOf="@+id/sizeTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/desc_title" />

            <com.beardedhen.androidbootstrap.AwesomeTextView
                android:id="@+id/contact_info_title"
                android:layout_width="136dp"
                android:layout_height="31dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="251dp"
                android:layout_marginBottom="8dp"
                app:bootstrapBrand="primary"
                app:bootstrapText="@string/contact_info_title"
                app:layout_constraintBottom_toTopOf="@+id/ownerEmail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/weightInput" />

            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/ownerEmail"
                android:layout_width="294dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="93dp"
                android:ems="10"
                android:hint="@string/emailHint"
                android:importantForAutofill="yes"
                android:inputType="textEmailAddress"
                android:textSize="18sp"
                app:bootstrapBrand="info"
                app:bootstrapSize="lg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contact_info_title" />

            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/ownerNumber"
                android:layout_width="294dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="93dp"
                android:ems="10"
                android:hint="@string/phoneHint"
                android:inputType="phone"
                android:textSize="18sp"
                app:bootstrapBrand="info"
                app:bootstrapSize="lg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ownerEmail" />

            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/ownerPostal"
                android:layout_width="294dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="93dp"
                android:ems="10"
                android:hint="@string/postalHint"
                android:importantForAutofill="yes"
                android:inputType="textPostalAddress"
                android:lineSpacingExtra="18sp"
                android:textSize="18sp"
                app:bootstrapBrand="info"
                app:bootstrapSize="lg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ownerNumber" />

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/submit_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="276dp"
                android:layout_marginBottom="16dp"
                android:text="@string/submit"
                app:bootstrapBrand="primary"
                app:bootstrapSize="lg"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ownerPostal"
                app:roundedCorners="true"
                app:showOutline="false" />

            <com.beardedhen.androidbootstrap.AwesomeTextView
                android:id="@+id/erroMessage"
                android:layout_width="231dp"
                android:layout_height="82dp"
                android:textColor="@color/errorMsg"
                android:textSize="18sp"
                app:bootstrapBrand="danger"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/submit_bt"
                app:layout_constraintTop_toTopOf="@+id/submit_bt" />

            <com.beardedhen.androidbootstrap.AwesomeTextView
                android:id="@+id/sizeTitle"
                style="@style/desc_style"
                android:layout_width="136dp"
                android:layout_height="31dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/galada"
                android:textSize="24sp"
                app:bootstrapBrand="primary"
                app:bootstrapText="@string/sizeInfo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/thingDescEdit" />

            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/widthInput"
                android:layout_width="105dp"
                android:layout_height="39dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/widthHint"
                android:importantForAutofill="yes"
                android:inputType="number"
                android:lineSpacingExtra="18sp"
                android:textSize="18sp"
                app:bootstrapBrand="info"
                app:bootstrapSize="lg"
                app:layout_constraintBottom_toTopOf="@+id/weightInput"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sizeTitle" />

            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/depthInput"
                android:layout_width="105dp"
                android:layout_height="39dp"
                android:layout_marginStart="8dp"
                android:ems="10"
                android:hint="@string/depthHint"
                android:importantForAutofill="yes"
                android:inputType="number"
                android:lineSpacingExtra="18sp"
                android:textSize="18sp"
                app:bootstrapBrand="info"
                app:bootstrapSize="lg"
                app:layout_constraintStart_toEndOf="@+id/widthInput"
                app:layout_constraintTop_toTopOf="@+id/widthInput" />

            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/heightInput"
                android:layout_width="105dp"
                android:layout_height="39dp"
                android:layout_marginStart="8dp"
                android:ems="10"
                android:hint="@string/heightHint"
                android:importantForAutofill="yes"
                android:inputType="number"
                android:lineSpacingExtra="18sp"
                android:textSize="18sp"
                app:bootstrapBrand="info"
                app:bootstrapSize="lg"
                app:layout_constraintStart_toEndOf="@+id/depthInput"
                app:layout_constraintTop_toTopOf="@+id/depthInput" />

            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/weightInput"
                android:ems="10"
                android:layout_width="110dp"
                android:layout_height="39dp"
                android:layout_marginStart="64dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/weightHint"
                android:importantForAutofill="yes"
                android:inputType="number"
                android:lineSpacingExtra="18sp"
                android:textSize="18sp"
                app:bootstrapBrand="info"
                app:bootstrapSize="lg"
                app:layout_constraintBottom_toTopOf="@+id/contact_info_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/widthInput" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>